# start-rust-stm32f723

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
