[package]
name = "rust-STM32F723E-DISCO"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"

[dependencies.stm32f7]
version = "0.8.0"
features = ["stm32f7x3", "rt"]