[package]
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "getting-started-stm32f723-disco"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f7]
# features = ["stm32f7x3", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "getting-started-stm32f723-disco"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
